   
        * 0.1.28
        
        * Fixed some issues with XML importing; the determination whether
        a property was multi or single was confused in quite a few cases.
        
        * Fixed issue where Session.move() constraints were not observed -
        now you no longer can save a target node without saving the source
        node and vice versa.
        
2009-08-02  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.27
        
        * Implemented initial same name sibling support; clone and
        move still do not work.
        
2009-07-30  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.26
        
        * Implemented query ordering.
        
2009-07-29  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.25

		* Workspace.clone() now works as well, completing support for
		corresponding nodes and workspace cloning. Yay!

        * Implemented rudimentary access control - calling Repository.login()
        now creates a readonly session.  Any credentials (even empty) create 
        a read-write session.
        
        * Implemented Document view import
        
        * Fixed some caching issues with SessionProvider.
		
2009-07-28  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.24
        
        * Node.update() now works.  Also, all root nodes are now also
        mix:referenceable with a known UUID. 
        
2009-07-28  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.23
        
        * FileProvider now properly stores UUIDs per workspace,
        as opposed to being global (oops - but the JCR spec *is* confusing
        in this regard; Univerally Unique IDs are not actually unique...)
        
        * Session.move() was checking for a wrong lock.
        
2009-07-27  Janne Jalkanen <jalkanen@ecyrd.com>
   
        * 0.1.22
        
        * Massively improved FileProvider save speed by implementing
        journaling for the UUID and Reference storage.

2009-07-14  Janne Jalkanen <jalkanen@ecyrd.com>