@@ -61,6 +61,18 @@ public class QItemDefinition
     }
 
     /**
+     *  Returns true, if this property type defines a wildcard type
+     *  instead of being specific.  All property definitions which
+     *  have the name "*" are considered to be wildcards.
+     *  
+     *  @return True, if this is a wildcard definition.
+     */
+    public boolean isWildCard()
+    {
+        return getQName().toString().equals("*");
+    }
+
+    /**
      *  Really implements the ItemDefinition
      *
      */
